# fpc_lab1

./: CMakeLists.txt  README.md
fpc_lab1/: CMakeLists.txt  fpc_lab1.cpp  fpc_lab1.h
